--- a/app/src/main/res/layout/fragment_artist.xml
+++ b/app/src/main/res/layout/fragment_artist.xml
@@ -16,7 +16,7 @@
             android:layout_marginTop="50dp"
             tools:src="@drawable/logo_meowfy"
             tools:padding="80dp"
-            tools:background="@color/primaryLigth2"/>
+            tools:background="@color/primaryLight2"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -122,7 +122,7 @@
             android:id="@+id/related"
             android:layout_below="@id/RelatedText"
             android:orientation="horizontal"
-            tools:listitem="@layout/item_lista_main"
+            tools:listitem="@layout/item_list_main"
             android:layout_marginTop="5dp"/>
     </RelativeLayout>
 </ScrollView>
