--- a/app/src/main/res/layout/fragment_reproductor.xml
+++ b/app/src/main/res/layout/fragment_reproductor.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginRight="20dp"
     android:layout_marginEnd="20dp"
-    tools:context=".fragments.ReproductorFragment">
+    tools:context=".fragments.PlayerFragment">
 
     <TextView
         android:layout_width="match_parent"
