--- a/app/src/main/res/layout/fragment_your_library.xml
+++ b/app/src/main/res/layout/fragment_your_library.xml
@@ -7,7 +7,7 @@
     tools:context=".fragments.YourLibraryFragment">
 
     <TextView
-        android:id="@+id/secctionTitel"
+        android:id="@+id/sectionTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Music"
@@ -19,7 +19,7 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/secctionTitel"
+        android:layout_below="@+id/sectionTitle"
         android:layout_marginRight="10dp"
         android:layout_marginEnd="10dp">
         <com.google.android.material.tabs.TabLayout
@@ -33,11 +33,11 @@
                 android:layout_width="wrap_content"
                 android:gravity="start" />
             <com.google.android.material.tabs.TabItem
-                android:text="@string/artistas"
+                android:text="@string/artists"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
             <com.google.android.material.tabs.TabItem
-                android:text="@string/albunes"
+                android:text="@string/albums"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:textAlignment="viewEnd"
