--- a/app/src/main/res/layout/item_your_library.xml
+++ b/app/src/main/res/layout/item_your_library.xml
@@ -4,48 +4,40 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginVertical="10dp">
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/image_library"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/ic_baseline_add_24"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true"
+        android:padding="30dp"
+        android:background="@color/primaryLight1"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/name_album1"
+        android:id="@+id/title_library"
         android:layout_toRightOf="@id/image_library"
         android:layout_alignParentTop="true"
         android:layout_marginTop="15dp"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:layout_marginLeft="10dp"
-        tools:text="nom llista"
+        tools:text="nom"
         android:layout_marginStart="10dp"
         android:textSize="20sp"/>
+
     <TextView
-        android:id="@+id/name_autor"
+        android:id="@+id/subtitle_library"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/name_album1"
+        android:layout_below="@id/title_library"
         android:layout_toEndOf="@+id/image_library"
         android:layout_toRightOf="@+id/image_library"
-        android:textColor="@color/primaryLigth2"
+        android:textColor="@color/primaryLight2"
         android:layout_marginLeft="10dp"
-        tools:text="name creator"
+        tools:text="subtitle"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"/>
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/favorits_album1"
-        android:layout_alignParentRight="true"
-        android:layout_centerInParent="true"
-        android:src="@drawable/ic_baseline_favorite_border_24"
-        android:background="@color/primary"
-        android:layout_alignParentEnd="true" />
 </RelativeLayout>
