--- a/app/src/main/res/layout/item_your_library_recommended1.xml
+++ b/app/src/main/res/layout/item_your_library_recommended1.xml
@@ -4,40 +4,48 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginVertical="10dp">
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/image_library"
-        android:src="@drawable/ic_baseline_add_24"
+        android:src="@mipmap/ic_launcher"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:padding="30dp"
-        android:background="@color/primaryLigth1"/>
+        android:layout_alignParentTop="true"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/titel_library"
+        android:id="@+id/name_artist"
         android:layout_toRightOf="@id/image_library"
         android:layout_alignParentTop="true"
         android:layout_marginTop="15dp"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:layout_marginLeft="10dp"
-        tools:text="nom"
+        tools:text="nom artist"
         android:layout_marginStart="10dp"
         android:textSize="20sp"/>
-
     <TextView
-        android:id="@+id/subtitel_library"
+        android:id="@+id/num_songs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/titel_library"
+        android:layout_below="@id/name_artist"
         android:layout_toEndOf="@+id/image_library"
         android:layout_toRightOf="@+id/image_library"
-        android:textColor="@color/primaryLigth2"
+        android:textColor="@color/primaryLight2"
         android:layout_marginLeft="10dp"
-        tools:text="subtitel"
+        tools:text="num songs"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/follow_artist"
+        android:text="FOLLOW"
+        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
