--- a/app/src/main/res/layout/item_yourlibrary_recommended2.xml
+++ b/app/src/main/res/layout/item_yourlibrary_recommended2.xml
@@ -16,36 +16,36 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/name_artist"
+        android:id="@+id/name_album1"
         android:layout_toRightOf="@id/image_library"
         android:layout_alignParentTop="true"
         android:layout_marginTop="15dp"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:layout_marginLeft="10dp"
-        tools:text="nom artist"
+        tools:text="nom llist"
         android:layout_marginStart="10dp"
         android:textSize="20sp"/>
     <TextView
-        android:id="@+id/num_songs"
+        android:id="@+id/name_autor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/name_artist"
+        android:layout_below="@id/name_album1"
         android:layout_toEndOf="@+id/image_library"
         android:layout_toRightOf="@+id/image_library"
-        android:textColor="@color/primaryLigth2"
+        android:textColor="@color/primaryLight2"
         android:layout_marginLeft="10dp"
-        tools:text="num songs"
+        tools:text="name creator"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"/>
 
-    <Button
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/follow_artist"
-        android:text="FOLLOW"
+        android:id="@+id/favorites_album1"
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:src="@drawable/ic_baseline_favorite_border_24"
+        android:background="@color/primary"
         android:layout_alignParentEnd="true" />
 </RelativeLayout>
